# rusttailcmd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  draft-release-main.yml  release-packaging.yml
src/: lib.rs  main.rs  tail.rs
tests/: integration_follow.rs  tail_initial.rs
