[package]
name = "wtail"
version = "0.1.0"
edition = "2021"
authors = ["wtail <dev@example.com>"]
description = "Cross-platform tail -f replacement focused on Windows compatibility"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
tokio = { version = "1", features = ["full", "fs"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
